# KBManager

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: plugin.json
commands/: ask.md  candidate-review.md  check.md  clean.md  init.md  knowledgebase-create.md  knowledgebase-init.md  knowledgebase-list.md  knowledgebase-map.md  knowledgebase-outline-archive.md  knowledgebase-outline-create.md  knowledgebase-outline-set-default.md  lark-server-start.md  lark-server-status.md  lark-server-stop.md  note-add.md  note-deprecate.md  note-list.md  note-view.md  source-add.md  source-deprecate.md
docs/: API设计.md  ClaudePlugin.md  Interface.md  SlashCommand流程图.md  对象.md  开发计划.md  架构设计.md  流程图.md
hooks/: hooks.json  kbm_review_gate.py
scripts/: kbmanager_lark_server.py  kbmanager_plugin.py  register_marketplace.py
skills/kbm-api-ui/: SKILL.md
skills/kbm-basic/: SKILL.md
skills/kbm-candidate-workflows/: SKILL.md
system-prompts/: candidate-create.md  candidate-review-assist.md  candidate-review-revise.md  clean-migration-plan.md  knowledge-merge-assist.md  knowledgebase-create.md  knowledgebase-init.md  note-title-summary.md  note-title.md  source-ingest-prompt-rewrite.md  source-ingest.md
tests/: conftest.py  test_claude_plugin.py  test_contracts.py  test_init.py  test_lark_server.py  test_lark_server_daemon.py  test_object_paths.py  test_phase3_source_candidate.py  test_phase4_review_knowledge.py  test_phase5_knowledgebase_note.py  test_phase6_index_rebuild.py  test_phase7_interface.py  test_phase8_llm_prompts.py  test_repository.py  test_workspace.py
(+63 files in other folders)
