[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kbmanager"
description = "File-based personal AI knowledge manager."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40",
    "PyYAML>=5.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kbmanager = ["templates/*.md", "templates/*.yml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
